refactor: stabilize tutoring prompt flow and align AI Tutor UX